Comando "/reparar" funcionando pero no descuenta experiencia al ser usado.